--- a/rivuletServer/main/static/css/style.css
+++ b/rivuletServer/main/static/css/style.css
@@ -50,24 +50,24 @@ a:hover {
   font-weight: 600;
 }
 .container-fluid .row{
-    padding: 10px 20px 30px 20px;
+    padding: 10px 20px 10px 20px;
 
 }
 .panel_section {
   background: rgba(19, 35, 47, 0.9);
-  padding: 40px;
-  max-width: 900px;
-  margin: 50px auto;
+  padding: 15px;
+  /*margin: 0px 0px 10px 0px;*/
   border-radius: 40px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
     text-align: center;
 }
 .panel_section button{
-    width: 100%;
+    width: 50%;
     border: 0;
   outline: none;
   border-radius: 0;
-  padding: 15px 50px;  margin: 40px 3px 40px 0px;
+  /*padding: 15px 20px;*/
+    margin: 10px 3px 0px 0px;
   font-size: 2rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -82,6 +82,9 @@ a:hover {
 
 .panel_section button:hover, button:focus{
     background: #4682b4;
+}
+.panel_section #cancel{
+    background: orange;
 }
 
 
@@ -174,11 +177,10 @@ a:hover {
 }
 .preview_section{
     background: rgba(19, 35, 47, 0.9);
-    padding: 30px 30px 20px 30px;
+    padding: 30px 20px 15px 20px;
     border-radius: 40px;
     box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
-    margin:auto;
-    border-radius: 40px;
+    border-radius: 20px;
 
 }
 
@@ -192,7 +194,7 @@ a:hover {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-    padding: 10px 5px 10px 0px;
+    padding: 0px 5px 10px 0px;
     /*margin: 0px 0px 20px 0px;*/
 }
 
@@ -233,7 +235,7 @@ a:hover {
       border: 0;
   outline: none;
   border-radius: 0;
-  padding: 15px 50px;  margin: 10px 3px 10px 0px;
+  padding: 15px 50px;  margin: 0px 10px 0px 0px;
   font-size: 2rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -440,15 +442,15 @@ a:hover {
 
 
 .container_radio{
-  margin: 0px 0px 0px 100px;
+  margin: 0px 0px 0px 50px;
 }
 
 .container_radio ul{
   /*list-style: none;*/
   height: 50%;
   width: 50%;
-  margin: 0;
-  padding: 0;
+  margin: 0px 50px 0px 0px;
+  /*padding: 0px 0px 0px 0px;*/
 }
 
 
@@ -461,8 +463,8 @@ a:hover {
   width: 50%;
   height: 50%;
 	/*border-bottom: 1px solid #111111;*/
-    /*margin:0px 0px 0px 20px;*/
-    text-align: center;
+    margin:0px 0px 0px 20px;
+    text-align: right;
 }
 
 .container_radio ul li input[type=radio]{
