--- a/rivuletServer/main/templates/main/upload.html
+++ b/rivuletServer/main/templates/main/upload.html
@@ -1,78 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Upload files</title>
-        {% load staticfiles %}
-        <link href="{% static 'css/dropzone.css' %}" type="text/css" rel="stylesheet"/>
-{#        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >#}
-        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" >
-        <link href='https://fonts.googleapis.com/css?family=Satisfy' rel="stylesheet" type="text/css">
-        <link href="{% static 'css/normalize.css' %}" type="text/css" rel="stylesheet"/>
-        <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+{% extends 'main/base.html' %}
 
-
-    </head>
-    <body>
-        <!-- nav section-->
-        <nav class="navbar navbar-default" >
-            <div class="container-fluid">
-                <!-- Header -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-target="#topNavBar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand">Rivulet</a>
-                </div>
-
-                <!-- Items -->
-                <div class="collapse navbar-collapse" id="topNavBar">
-                    <ul class="nav navbar-nav">
-                        <li class="active">
-                            <a href="{% url "main:home" %}">
-                                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Home Page
-                            </a>
-                        </li>
-                        <li class="">
-                            <a href="{% url 'main:upload'%}">
-                                <span class="glyphicon glyphicon-open" aria-hidden="true"></span>&nbsp;Upload file
-                            </a>
-                        </li>
-
-                    </ul>
-{#                    <form class="navbar-form navbar-left" role="search">#}
-{#                        <div class="form-group">#}
-{#                            <div class="input-group">#}
-{#                                <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>#}
-{#                                <input type="text" class="form-control" placeholder="Search">#}
-{#                            </div>#}
-{##}
-{#                        </div>#}
-{#                        <button type="submit" class="btn btn-default">Submit</button>#}
-{#                    </form>#}
-
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><p class="navbar-text"><span class="label label-primary"><span class="glyphicon glyphicon-user"></span> {{ user.username }}</span></p></li>
-                         <li class="">
-                            <a href="{% url 'main:task'%}">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;New task
-                            </a>
-                        </li>
-                        <li class="">
-                            <a href="{% url "login:register" %}">
-                                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;Logout
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </nav>
-
+{% block body %}
 
         <!-- Upload section -->
         <div class="panel_section">
@@ -96,7 +24,7 @@
 {#            {% for file in all_upload_files %}#}
 {#                <p>{{ file }}</p>#}
 {#            {% endfor %}#}
-            <script src="{% static 'js/dropzone.js' %}"></script>
+{#            <script src="{% static 'js/dropzone.js' %}"></script>#}
             <script type="text/javascript">
 
                 var upload_files_size = 0
@@ -175,5 +103,4 @@
 
 
 
-    </body>
-</html>
+{% endblock %}
